fix transition mobile-menu

--- a/css/style.css
+++ b/css/style.css
@@ -862,7 +862,7 @@ img {
 		background-color: var(--bg-white-color);
 
 		transform: translateX(100%);
-		transition: transform, 3000ms cubic-bezier(0.4, 0, 0.2, 1);
+		transition: transform, 300ms cubic-bezier(0.4, 0, 0.2, 1);
 	}
 
 	.mobile-menu.is-open {
